deploy: 0df01c0fa911681643d1750933c45d3d63f60f79

--- a/21-12-13-idea-generation-and-management/index.html
+++ b/21-12-13-idea-generation-and-management/index.html
@@ -33,6 +33,11 @@ our it with our research interests?</li>
 personal scientific visions!</li>
 <li>...</li>
 </ul>
+<br />
+<p><strong>Registration:</strong> <a href="https://forms.gle/UgnpU9PKXfoUioSB6">Sign-up for us to plan ahead</a><br>
+<strong>Location:</strong> Informatic Forum, Room 'MiniForum 2'</p>
+<br />
+<br />
 <p><span
       class="gatsby-resp-image-wrapper"
       style="position: relative; display: block; margin-left: auto; margin-right: auto; max-width: 970px; "
