deploy: acb5d9dd04254b010c553e775317bd9e9dedc1f5

--- a/21-12-13-idea-generation-and-management/index.html
+++ b/21-12-13-idea-generation-and-management/index.html
@@ -20,7 +20,7 @@ if writing one already takes all your time?</li>
 <p>You likely already developed your own sophisticated strategies to master these
 questions. Maybe you use open-source as a tool to enable collaboration, take
 inspiration from improv theater to brainstorm effectively, or take advantage of
-teaching and supervision as a mean to get in touch with researched-focused
+teaching and supervision to get in touch with researched-focused
 students early on?</p>
 <p>In this Unworkshop, we will approach the practical side of idea generation and
 as a first step harvest the great strategies already in existence within our
@@ -35,7 +35,7 @@ personal scientific visions!</li>
 </ul>
 <br />
 <p><strong>Registration:</strong> <a href="https://forms.gle/UgnpU9PKXfoUioSB6">Sign-up for us to plan ahead</a><br>
-<strong>Location:</strong> Informatic Forum, Room 'MiniForum 2'</p>
+<strong>Location:</strong> Informatics Forum, Room 'MiniForum 2' (4th floor, next to the roof terrace)</p>
 <br />
 <br />
 <p><span
