--- a/21-12-13-idea-generation-and-management/index.html
+++ b/21-12-13-idea-generation-and-management/index.html
@@ -35,7 +35,7 @@ personal scientific visions!</li>
 </ul>
 <br />
 <p><strong>Registration:</strong> <a href="https://forms.gle/UgnpU9PKXfoUioSB6">Sign-up for us to plan ahead</a><br>
-<strong>Location:</strong> Informatics Forum, Room 'MiniForum 2' (4th floor, next to the roof terrace)
+<strong>Location:</strong> Informatics Forum, Room 'MiniForum 2' (4th floor, next to the roof terrace)<br>
 <strong>Organizers:</strong> Alexander Viand (ETH), Ohad Kamar, Tobias Grosser</p>
 <br />
 <br />
