deploy: f38fe5cf259863f65402c8e48fdd2f4c5b4f5efe

--- a/22-04-27-crafting-exquisite-ideas/index.html
+++ b/22-04-27-crafting-exquisite-ideas/index.html
@@ -28,6 +28,7 @@ idea that may need some polishing.</p>
 <p>Join us for an experimental afternoon and play the science game with us.</p>
 <h2>Your Hosts</h2>
 <p><strong>Alexander Viand</strong></p>
+<p>Alexander Viand is a doctoral student &#x26; research assistant in the Applied Cryptography Group at ETH Zürich and a member of the Privacy Preserving Systems Lab. His interests include usable security and privacy, privacy enhancing technologies, and the interactions between these technologies and society. In his research, he works with secure computation technologies including Fully Homomorphic Encryption, trying to make these techniques more accessible to non-experts by developing new systems, tools and abstractions</p>
 <p><span
       class="gatsby-resp-image-wrapper"
       style="position: relative; display: block; margin-left: auto; margin-right: auto; max-width: 970px; "
