--- a/22-04-27-crafting-exquisite-ideas/index.html
+++ b/22-04-27-crafting-exquisite-ideas/index.html
@@ -28,7 +28,7 @@ idea that may need some polishing.</p>
 <p>Join us for an experimental afternoon and play the science game with us.</p>
 <h2>Your Hosts</h2>
 <p><strong>Alexander Viand</strong></p>
-<p>Alexander Viand is a doctoral student &#x26; research assistant in the Applied Cryptography Group at ETH Zürich and a member of the Privacy Preserving Systems Lab. His interests include usable security and privacy, privacy enhancing technologies, and the interactions between these technologies and society. In his research, he works with secure computation technologies including Fully Homomorphic Encryption, trying to make these techniques more accessible to non-experts by developing new systems, tools and abstractions</p>
+<p>When he isn't visiting UoE, Alexander Viand is a PhD student at ETH Zurich. There, he's active in the scientific staff association (VMI) and had the pleasure to help coordinate the Scientific Excellence &#x26; Well-Being initiative. His research focuses on making advanced cryptographic techniques such as Fully Homomorphic Encryption accessible to non-experts by developing new systems, tools and abstractions.</p>
 <p><span
       class="gatsby-resp-image-wrapper"
       style="position: relative; display: block; margin-left: auto; margin-right: auto; max-width: 970px; "
