deploy: fe261014e106065241e373d19f68dd68c1d9860f

--- a/22-04-27-crafting-exquisite-ideas/index.html
+++ b/22-04-27-crafting-exquisite-ideas/index.html
@@ -28,7 +28,7 @@ idea that may need some polishing.</p>
 <p>Join us for an experimental afternoon and play the science game with us.</p>
 <h2>Your Hosts</h2>
 <p><strong>Alexander Viand</strong></p>
-<p>When he isn't visiting UoE, Alexander Viand is a PhD student at ETH Zurich. There, he's active in the scientific staff association (VMI) and had the pleasure to help coordinate the Scientific Excellence &#x26; Well-Being initiative. His research focuses on making advanced cryptographic techniques such as Fully Homomorphic Encryption accessible to non-experts by developing new systems, tools and abstractions.</p>
+<p>When he isn't visiting UoE, Alexander Viand is a PhD student at ETH Zurich. There, he's active in the scientific staff association (VMI) and had the pleasure to help coordinate the <a href="http://vmi.ethz.ch/wellbeing/">Scientific Excellence &#x26; Well-Being initiative</a>. His research focuses on making advanced cryptographic techniques such as Fully Homomorphic Encryption accessible to non-experts by developing new systems, tools and abstractions.</p>
 <p><span
       class="gatsby-resp-image-wrapper"
       style="position: relative; display: block; margin-left: auto; margin-right: auto; max-width: 970px; "
@@ -77,9 +77,10 @@ idea that may need some polishing.</p>
   </a>
     </span></p>
 <p><strong>Ohad Kammar</strong></p>
-<p>Ohad is a Senior Research Fellow at the University of Edinburgh School of
-Informatics, and his interests include programming languages and applied
-mathematics (category theory, logic, algebra).</p>
+<p><a href="https://www.denotational.co.uk/">Ohad Kammar</a> is a Senior Research Fellow at
+the University of Edinburgh School of Informatics, and his interests include
+programming languages and applied mathematics (category theory, logic,
+algebra).</p>
 <p><span
       class="gatsby-resp-image-wrapper"
       style="position: relative; display: block; margin-left: auto; margin-right: auto; max-width: 250px; "
